removing some java opts